fixed text alignment

--- a/scaling.css
+++ b/scaling.css
@@ -1,6 +1,5 @@
 p {
     text-wrap: wrap;
-    text-align: center;
     font-size: large;
 }
 
